feat: 3-way location route, live video & document verification suite, role-tailored portals, and PDF generator